# VitaSport

./: CONTRIBUTING.md  package.json
.github/workflows/: release-windows.yml
src/: App.tsx  version.ts
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
src/components/: Layout.tsx  ProductForm.tsx  UpdateNotification.tsx
src/hooks/: useUpdateChecker.ts
src/pages/: Dashboard.tsx  Login.tsx  Products.tsx  Reports.tsx  Sales.tsx  Settings.tsx  Users.tsx
