[package]
name = "vitasport"
version = "1.0.0"
description = "Sistema de Gestión de Inventario"
authors = ["KronoxYT"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
tauri = { version = "1.8.3", features = [ "shell-all", "fs-all", "dialog-all" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
bcrypt = "0.15"
# Evita enlazar OpenSSL (requiere pkg-config/openssl-dev). Usamos rustls.
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# Perfil de desarrollo optimizado para velocidad de compilación
[profile.dev]
opt-level = 1  # Optimización mínima para compilar más rápido
incremental = true  # Compilación incremental
codegen-units = 256  # Más unidades = compilación más paralela

# Optimizar dependencias en modo dev (no tu código)
[profile.dev.package."*"]
opt-level = 2  # Las dependencias se optimizan más
debug = false  # Sin símbolos de debug en dependencias
